[package]
name = "serika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
teloxide = { version = "0.12", default-features = false, features = [
    "macros",
    "ctrlc_handler",
    "auto-send",
    "rustls",
] }
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
] }
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0.152"
serde_json = "1.0.93"
once_cell = "1.17.1"
